@@ -1,3 +1,7 @@
+2008-09-17  Bob Wilson  <bob.wilson@acm.org>
+
+	* elf32-xtensa.c (elf_xtensa_check_relocs): Check for negative refcount.
+
 2008-09-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	PR 6893 - Do not consider FDEs for discarded sections as invalid.
